--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
               </div>
               <!-- /Logo -->
               <p class="mb-4">
-                Please sign-in to your account in order to access admin panel
+                Please sign-in to your account in order to access admin panel.
               </p>
 
               <form
